--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -54,16 +54,16 @@
       <table class="table datatable table-striped" id="hitos" data-info="false">
         <thead>
         <tr>
-          <th class="status_col"><%= t('milestones.state_title') %></th>
-          <th class="title_row" ><%= t('milestones.title') %></th>
-          <th class="description_row"><%= t('milestones.description') %></th>
-          <th id="categories"><%= t('milestones.category') %></th>
-          <th id="people"><%= t('milestones.people') %></th>
-          <th id="tags"><%= t('milestones.tags') %></th>
-          <th id="start_date" style="width: 100px" ><%= t('milestones.start_date') %></th>
-          <th id="due_date" style="width: 100px"><%= t('milestones.due_date') %></th>
-          <th id="mod_date" style="width: 100px"><%= t('milestones.mod_date') %></th>
-          <th><%= t('milestones.actions') %></th>
+          <th id="status" class="status status_col"><%= t('milestones.state_title') %></th>
+          <th id="title" class="title title_row" ><%= t('milestones.title') %></th>
+          <th id="description" class="description description_row"><%= t('milestones.description') %></th>
+          <th class="categories"><%= t('milestones.category') %></th>
+          <th class="people"><%= t('milestones.people') %></th>
+          <th class="tags"><%= t('milestones.tags') %></th>
+          <th class="start_date" style="width: 100px" ><%= t('milestones.start_date') %></th>
+          <th class="due_date" style="width: 100px"><%= t('milestones.due_date') %></th>
+          <th class="mod_date" style="width: 100px"><%= t('milestones.mod_date') %></th>
+          <th class="actions"><%= t('milestones.actions') %></th>
         </tr>
         </thead>
 
